private void drawRandomNumbersPyramid(Graphics g)